--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,7 +1,6 @@
 project(engine)
 
 find_package(OpenGL REQUIRED)
-find_package(glfw3 REQUIRED)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED True)
@@ -12,10 +11,12 @@ add_executable(engine
         src/math/ivec2.c
         src/math/vec2.c
         src/stb/stb_image.c
+        src/system/timer_win32.c
+        src/system/window_win32.c
         src/game.c
         src/main.c
         src/player.c
         src/deferred_tile_update_list.c
         src/tilemap.c)
 
-target_link_libraries(engine glfw OpenGL::GL OpenGL::GLU)
+target_link_libraries(engine OpenGL::GL OpenGL::GLU dwmapi winmm)
